fixed text overflow issue on admin menu item cards

--- a/website/src/styles/AdminDash.scss
+++ b/website/src/styles/AdminDash.scss
@@ -10,6 +10,7 @@
 .ad-menu-item-deets-cont {
 //   border: 1px dashed black;
   height: 25%;
+  text-overflow: ellipsis;
 }
 
 .ad-avail-status-div {
@@ -20,6 +21,7 @@
 .ad-avail-green {
   text-align: center;
   color: green;
+  font-size: 0.8rem;
 }
 
 .ad-avail-red {
@@ -32,6 +34,11 @@
   font-size: 1rem;
   text-align: center;
   height: 33%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 .ad-menu-item-price {
@@ -42,7 +49,7 @@
 
 .ad-menu-item-img {
   width: 100%;
-  height: 220px;
+  height: 60%;
   margin-bottom: 2%;
 
   object {
